<resources>
    <string name="app_name">maths_ege_game</string>
    <string name="tasks">Задания</string>
    <string name="test">1 часть</string>
    <string name="ege">ЕГЭ</string>
    <string name="hellostring">Привет! Готов Решать?</string>
    <string name="buttonExit">Выход</string>
    <string name="textVibor">Выбери задание</string>
    <string name="buttonTask1">Задание 1</string>
    <string name="buttonTask2">Задание 2</string>
    <string name="buttonTask3">Задание 3</string>
    <string name="buttonTask4">Задание 4</string>
    <string name="buttonTask5">Задание 5</string>
    <string name="buttonTask6">Задание 6</string>
    <string name="buttonTask7">Задание 7</string>
    <string name="buttonTask8">Задание 8</string>
    <string name="buttonTask9">Задание 9</string>
    <string name="buttonTask10">Задание 10</string>
    <string name="buttonTask11">Задание 11</string>
    <string name="buttonTask12">Задание 12</string>
    <string name="buttonTask13">Задание 13</string>
    <string name="buttonTask14">Задание 14</string>
    <string name="buttonTask15">Задание 15</string>
    <string name="buttonTask16">Задание 16</string>
    <string name="buttonTask17">Задание 17</string>
    <string name="buttonTask18">Задание 18</string>
    <string name="buttonTask19">Задание 19</string>
    <string name="inputAnswer">Введите ответ</string>
    <string name="task1.1">Для покраски потолка требуется 280 г краски на 1 м^2. Краска продаётся в банках по 2,5 кг. Какое наименьшее количество банок краски нужно купить для покраски потолка площадью 61 м^2?</string>
    <string name="task1.2">Призерами городской олимпиады по математике стало 48 учеников, что составило 12% от числа участников. Сколько человек участвовало в олимпиаде?</string>
    <string name="task1.3">На счету Настиного мобильного телефона было 79 рублей, а после разговора с Вовой осталось 40 рублей. Сколько минут длился разговор с Вовой, если одна минута разговора стоит 1 рубль 50 копеек?</string>
    <string name="task1.4">Розничная цена учебника 132 рубля, она на 20% выше оптовой цены. Какое наибольшее число таких учебников можно купить по оптовой цене на 5000 рублей?</string>
    <string name="task1.5">По тарифному плану «Просто как день» компания сотовой связи каждый вечер снимает со счёта абонента 18 руб. Если на счету осталось меньше 18 руб., то на следующее утро номер блокируют до пополнения счёта. Сегодня утром у Лизы на счету было 800 руб. Сколько дней (включая сегодняшний) она сможет пользоваться телефоном, не пополняя счёт?</string>
    <string name="task1.6">В доме, в котором живёт Игорь, один подъезд. На каждом этаже по шесть квартир. Игорь живёт в квартире 69. На каком этаже живёт Игорь?</string>
    <string name="task1.7">Студент получил свой первый гонорар в размере 1100 рублей за выполненный перевод. Он решил на все полученные деньги купить букет гвоздик для своей учительницы английского языка. Какое наибольшее количество гвоздик сможет купить студент, если удержанный у него налог на доходы составляет 13% гонорара, гвоздики стоят 40 рублей за штуку и букет должен состоять из нечётного числа цветов?</string>
    <string name="task1.8">В городе N живет 300000 жителей. Среди них 20% детей и подростков. Среди взрослых 35% не работает (пенсионеры, студенты, домохозяйки и т.п.). Сколько взрослых жителей работает?</string>
    <string name="task1.9">В квартире установлен прибор учёта расхода холодной воды (счётчик). Показания счётчика 1 января составляли 121 куб. м воды, а 1 февраля — 131 куб. м. Сколько нужно заплатить за холодную воду за январь, если стоимость 1 куб. м холодной воды составляет 13 руб. 50 коп.? Ответ дайте в рублях.</string>
    <string name="task1.10">Сырок стоит 7 рублей 20 копеек. Какое наибольшее число сырков можно купить на 60 рублей?</string>
    <string name="task1.11">В сентябре 1 кг картофеля стоил 20 рублей, в октябре картофель подорожал на 25%, а в ноябре еще на 20%. Сколько рублей стоил 1 кг картофеля после подорожания в ноябре?</string>
    <string name="task1.12">Выпускники 11 «А» покупают букеты цветов для последнего звонка: из 5 роз каждому учителю и из 9 роз классному руководителю и директору. Они собираются подарить букеты 17 учителям (включая директора и классного руководителя), розы покупаются по оптовой цене 30 рублей за штуку. Сколько рублей стоят все розы?</string>
    <string name="task1.13">В школе есть трехместные туристические палатки. Какое наименьшее число палаток нужно взять в поход, в котором участвует 20 человек?</string>
    <string name="task1.14">На одну порцию рисовой каши требуется 40 грамм риса и 0,12 литра молока. Какое наибольшее количество порций каши может приготовить столовая, если в ее распоряжении есть 900 грамм риса и 3 литра молока?</string>
    <string name="task1.15">Шариковая ручка стоит 30 рублей. Какое наибольшее число таких ручек можно будет купить на 700 рублей после повышения цены на 25%?</string>
    <string name="task1.16">Для ремонта квартиры требуется 63 рулона обоев. Сколько пачек обойного клея нужно купить, если одна пачка клея рассчитана на 6 рулонов?</string>
    <string name="task1.17">1 киловатт-час электроэнергии стоит 1 рубль 40 копеек. Счётчик электроэнергии 1 июня показывал 23818 киловатт-часов, а 1 июля показывал 23992 киловатт-часа. Какую сумму нужно заплатить за электроэнергию за июнь? Ответ дайте в рублях.</string>
    <string name="task1.18">Задачу №1 правильно решили 18 810 человек, что составляет 57% выпускников города. Сколько всего выпускников в этом городе?</string>
    <string name="task1.19">Шоколадка стоит 35 рублей. В воскресенье в супермаркете действует специальное предложение: заплатив за две шоколадки, покупатель получает три (одну в подарок). Какое наибольшее количество шоколадок можно получить, потратив не более 200 рублей в воскресенье?</string>
    <string name="task1.20">Футболка стоила 800 рублей. Затем цена была снижена на 15%. Сколько рублей сдачи с 1000 рублей должен получить покупатель при покупке этой футболки после снижения цены?</string>
    <string name="task1.21">На бензоколонке один литр бензина стоит 34 руб. 20 коп. Водитель залил в бак 25 литров бензина и взял бутылку воды за 20 рублей. Сколько рублей сдачи он получит с 1000 рублей?</string>
    <string name="task1.22">Среди 70 000 жителей города 40% не интересуется футболом. Среди футбольных болельщиков 70% смотрело по телевизору финал чемпионата мира. Сколько жителей города смотрело этот матч?</string>
    <string name="task1.23">Диагональ экрана телевизора равна 64 дюймам. Выразите диагональ экрана в сантиметрах, если в одном дюйме 2,54 см. Результат округлите до целого числа сантиметров.</string>
    <string name="task1.24">Тетрадь стоит 40 рублей. Какое наибольшее число таких тетрадей можно будет купить на 750 рублей после понижения цены на 10%?</string>
    <string name="task1.25">Шоколадка стоит 25 рублей. В воскресенье в супермаркете действует специальное предложение: заплатив за две шоколадки, покупатель получает три (одну — в подарок). Какое наибольшее количество шоколадок можно получить, потратив не более 480 рублей в воскресенье?</string>
    <string name="task1.26">Установка двух счётчиков воды (холодной и горячей) стоит 2500 рублей. До установки счётчиков за воду платили 1700 рублей ежемесячно. После установки счётчиков ежемесячная оплата воды стала составлять 1000 рублей. Через какое наименьшее количество месяцев экономия по оплате воды превысит затраты на установку счётчиков, если тарифы на воду не изменятся?</string>
    <string name="task1.27">В обменном пункте 1 гривна стоит 3 рубля 90 копеек. Отдыхающие обменяли рубли на гривны и купили арбуз весом 7 кг по цене 2 гривны за 1 кг. Во сколько рублей обошлась им эта покупка? Ответ округлите до целого числа.</string>
    <string name="task1.28">В общежитии института в каждой комнате можно поселить четырех человек. Какое наименьшее количество комнат необходимо для поселения 89 иногородних студентов?</string>
    <string name="task1.29">Одна таблетка лекарства весит 70 мг и содержит 4% активного вещества. Ребёнку в возрасте до 6 месяцев врач прописывает 1,05 мг активного вещества на каждый килограмм веса в сутки. Сколько таблеток этого лекарства следует дать ребёнку в возрасте пяти месяцев и весом 8 кг в течение суток?</string>
    <string name="task1.30">Флакон шампуня стоит 160 рублей. Какое наибольшее число флаконов можно купить на 1000 рублей во время распродажи, когда скидка составляет 25% ?</string>
    <string name="task1.31">Теплоход рассчитан на 1000 пассажиров и 30 членов команды. Каждая спасательная шлюпка может вместить 50 человек. Какое наименьшее число шлюпок должно быть на теплоходе, чтобы в случае необходимости в них можно было разместить всех пассажиров и всех членов команды?</string>
    <string name="task1.32">Держатели дисконтной карты книжного магазина получают при покупке скидку 10%. Книга стоит 680 рублей. Сколько рублей заплатит держатель дисконтной карты за эту книгу?</string>
    <string name="task1.33">Рост человека 6 футов 1 дюйм. Выразите его рост в сантиметрах, если 1 фут равен 12 дюймам. Считайте, что 1 дюйм равен 2,54 см. Результат округлите до целого числа сантиметров.</string>
    <string name="task1.34">Флакон шампуня стоит 140 рублей. Какое наибольшее количество флаконов можно купить на 900 рублей во время распродажи, когда скидка составляет 35 %?</string>
    <string name="task1.35">Шариковая ручка стоит 40 рублей. Какое наибольшее число таких ручек можно будет купить на 900 рублей после повышения цены на 10%?</string>
    <string name="task1.36">В книге Елены Молоховец «Подарок молодым хозяйкам» имеется рецепт пирога с черносливом. Для пирога на 10 человек следует взять 1/10 фунта чернослива. Сколько граммов чернослива следует взять для пирога, рассчитанного на 3 человек? Считайте, что 1 фунт равен 0,4 кг.</string>
    <string name="task1.37">В доме, в котором живёт Ася, 9 этажей и несколько подъездов. На каждом этаже находится по 3 квартиры. Ася живёт в квартире № 38. В каком подъезде живёт Ася?    </string>
    <string name="task1.38">При оплате услуг через платежный терминал взимается комиссия 5%. Терминал принимает суммы кратные 10 рублям. Аня хочет положить на счет своего мобильного телефона не меньше 300 рублей. Какую минимальную сумму она должна положить в приемное устройство данного терминала?</string>
    <string name="task1.39">В магазине «Сделай сам» мебель продаётся в разобранном виде. При желании покупатель может заказать сборку мебели на дому, стоимость которой составляет 15% от стоимости самой мебели. Во сколько рублей обойдётся кухонный шкаф вместе со сборкой, если без сборки он продаётся за 3000 руб.?</string>
    <string name="task1.40">Сырок стоит 8 рублей 20 копеек. Какое наибольшее число сырков можно купить на 50 рублей?</string>
    <string name="task1.41">Летом килограмм клубники стоит 60 рублей. Мама купила 2 кг 200 г клубники. Сколько рублей сдачи она должна получить с 200 рублей?</string>
    <string name="task1.42">Тетрадь стоит 14 рублей. Сколько рублей заплатит покупатель за 70 тетрадей, если при покупке больше 50 тетрадей магазин делает скидку 5% от стоимости всей покупки?</string>
    <string name="task1.43">Одного рулона обоев хватает для оклейки полосы от пола до потолка шириной 1,6 м. Сколько рулонов обоев нужно купить для оклейки прямоугольной комнаты размерами 2,3 м на 4,2 м?</string>
    <string name="task1.44">Оптовая цена учебника 170 рублей. Розничная цена на 20% выше оптовой. Какое наибольшее число таких учебников можно купить по розничной цене на 7000 рублей?</string>
    <string name="task1.45">На день рождения полагается дарить букет из нечетного числа цветов. Тюльпаны стоят 30 рублей за штуку. У Вани есть 500 рублей. Из какого наибольшего числа тюльпанов он может купить букет Маше на день рождения?</string>
</resources>