<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkTheme"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40sp"
            android:fontFamily="monospace"
            android:paddingTop="30sp"
            android:paddingBottom="40sp"
            android:text="@string/hellostring"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorLink="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonEge"
            android:layout_width="322sp"
            android:layout_height="105sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:padding="10sp"
            android:text="@string/ege"
            android:textColor="@android:color/black"
            android:textColorLink="@android:color/black"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonPart1"
            android:layout_width="322sp"
            android:layout_height="105sp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="32sp"
            android:layout_marginRight="40sp"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:padding="10sp"
            android:text="@string/test"
            android:textColor="@color/colorDark"
            android:textColorLink="@android:color/black"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonTasks"
            android:layout_width="322sp"
            android:layout_height="105sp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="40sp"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:padding="10sp"
            android:text="@string/tasks"
            android:textColor="@color/colorDark"
            android:textColorHint="@android:color/black"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="322sp"
            android:layout_height="105sp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="40sp"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:text="@string/buttonExit"
            android:textColor="@color/colorDark"
            android:textColorHint="@android:color/black"
            android:textSize="36sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>